# oxidizer

./: .gitignore  Dockerfile  README.md  docker-compose.yml  env.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
server/: app.py
static/: index.html
