[project]
name = "oxidizer"
version = "1.0.0"
description = "OpenEnv RL environment where an AI agent fixes broken Rust builds using cargo check"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openenv-core>=0.2.0",
    "pydantic>=2.0.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "openai>=1.0.0",
]

[project.scripts]
# openenv validate requires a "server" script pointing to a main() function.
server = "server.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server"]
